# telemetry_agent

./: .gitignore  CMakeLists.txt  README.md
bench/: benchmark_full_agent.cpp  benchmark_scenarios.cpp
src/: full_agent.cpp  hysteresis_fsm.cpp  interface_tracker.cpp  rolling_window.cpp  scenarios.cpp  telemetry_agent.cpp  telemetry_agent_cli.cpp
tests/: test_interface_tracker.cpp  test_missing_samples.cpp  test_rolling_window.cpp  test_scenario_a.cpp  test_scenario_b.cpp
tests_full_agent/: test_full_agent_scenario_a.cpp  test_full_agent_scenario_b.cpp
